* Sat Feb 15 04:25:37 2003, pabs <pabs@pablotron.org
  * joystick.c: added Joystick::Device#fd